--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="parts-list-container">
 					<ul id="partsList" class="parts-list">
 						<li><a href="#">最新情報</a></li>
-						<li><a href="#">ヒーロー</a></li>
+						<li><a href="hero.html">ヒーロー</a></li>
 						<li><a href="#">アイテム</a></li>
 						<li><a href="#">タレント</a></li>
 						<li><a href="#">魔導版・石</a></li>
@@ -63,36 +63,54 @@
 					</div>
 				</div>
 				<div id="mainpage">
-					<p>携帯端末市場の天文学的な成長を支える主な要因が、スマートフォンの人気の高まりであることが、Ericssonの新しいデータによって明らかになっている。</p>
-					<p>通信技術企業Ericssonは米国時間11月11日、第3四半期の携帯電話販売台数データを公表し、スマートフォンが、同四半期における世界の全携帯電話販売台数の55％を占めたことを明らかにした。ただし、全携帯電話契約件数に占める割合はまだわずか25〜30％だという。しかし、2019年までには、世界の携帯電話契約件数93億件のうち、56億件（60％）がスマートフォンになる見込みだとEricssonは述べた。</p>
-					<p>Ericssonによると、この動向をけん引するのは、中国などの新興市場における低価格モデルのスマートフォンの登場であるという。</p>
-					<p>スマートフォンの人気の高まりに伴い、携帯端末からのモバイルトラフィックは2013年から2019年の間に10倍に増加するとEricssonは考えている。同社によると、動画が世界のモバイルトラフィックの50％以上を占める見込みだという。2019年までには、年間総スマートフォントラフィックが10エクサバイトに達する見込みである。</p>
-					<p>携帯端末市場の天文学的な成長を支える主な要因が、スマートフォンの人気の高まりであることが、Ericssonの新しいデータによって明らかになっている。</p>
-					<p>通信技術企業Ericssonは米国時間11月11日、第3四半期の携帯電話販売台数データを公表し、スマートフォンが、同四半期における世界の全携帯電話販売台数の55％を占めたことを明らかにした。ただし、全携帯電話契約件数に占める割合はまだわずか25〜30％だという。しかし、2019年までには、世界の携帯電話契約件数93億件のうち、56億件（60％）がスマートフォンになる見込みだとEricssonは述べた。</p>
-					<p>Ericssonによると、この動向をけん引するのは、中国などの新興市場における低価格モデルのスマートフォンの登場であるという。</p>
-					<p>スマートフォンの人気の高まりに伴い、携帯端末からのモバイルトラフィックは2013年から2019年の間に10倍に増加するとEricssonは考えている。同社によると、動画が世界のモバイルトラフィックの50％以上を占める見込みだという。2019年までには、年間総スマートフォントラフィックが10エクサバイトに達する見込みである。</p>
-					<p>携帯端末市場の天文学的な成長を支える主な要因が、スマートフォンの人気の高まりであることが、Ericssonの新しいデータによって明らかになっている。</p>
-					<p>通信技術企業Ericssonは米国時間11月11日、第3四半期の携帯電話販売台数データを公表し、スマートフォンが、同四半期における世界の全携帯電話販売台数の55％を占めたことを明らかにした。ただし、全携帯電話契約件数に占める割合はまだわずか25〜30％だという。しかし、2019年までには、世界の携帯電話契約件数93億件のうち、56億件（60％）がスマートフォンになる見込みだとEricssonは述べた。</p>
-					<p>Ericssonによると、この動向をけん引するのは、中国などの新興市場における低価格モデルのスマートフォンの登場であるという。</p>
-					<p>スマートフォンの人気の高まりに伴い、携帯端末からのモバイルトラフィックは2013年から2019年の間に10倍に増加するとEricssonは考えている。同社によると、動画が世界のモバイルトラフィックの50％以上を占める見込みだという。2019年までには、年間総スマートフォントラフィックが10エクサバイトに達する見込みである。</p>
-					<p>携帯端末市場の天文学的な成長を支える主な要因が、スマートフォンの人気の高まりであることが、Ericssonの新しいデータによって明らかになっている。</p>
-					<p>通信技術企業Ericssonは米国時間11月11日、第3四半期の携帯電話販売台数データを公表し、スマートフォンが、同四半期における世界の全携帯電話販売台数の55％を占めたことを明らかにした。ただし、全携帯電話契約件数に占める割合はまだわずか25〜30％だという。しかし、2019年までには、世界の携帯電話契約件数93億件のうち、56億件（60％）がスマートフォンになる見込みだとEricssonは述べた。</p>
-					<p>Ericssonによると、この動向をけん引するのは、中国などの新興市場における低価格モデルのスマートフォンの登場であるという。</p>
-					<p>スマートフォンの人気の高まりに伴い、携帯端末からのモバイルトラフィックは2013年から2019年の間に10倍に増加するとEricssonは考えている。同社によると、動画が世界のモバイルトラフィックの50％以上を占める見込みだという。2019年までには、年間総スマートフォントラフィックが10エクサバイトに達する見込みである。</p>
-					<p>携帯端末市場の天文学的な成長を支える主な要因が、スマートフォンの人気の高まりであることが、Ericssonの新しいデータによって明らかになっている。</p>
-					<p>通信技術企業Ericssonは米国時間11月11日、第3四半期の携帯電話販売台数データを公表し、スマートフォンが、同四半期における世界の全携帯電話販売台数の55％を占めたことを明らかにした。ただし、全携帯電話契約件数に占める割合はまだわずか25〜30％だという。しかし、2019年までには、世界の携帯電話契約件数93億件のうち、56億件（60％）がスマートフォンになる見込みだとEricssonは述べた。</p>
-					<p>Ericssonによると、この動向をけん引するのは、中国などの新興市場における低価格モデルのスマートフォンの登場であるという。</p>
-					<p>スマートフォンの人気の高まりに伴い、携帯端末からのモバイルトラフィックは2013年から2019年の間に10倍に増加するとEricssonは考えている。同社によると、動画が世界のモバイルトラフィックの50％以上を占める見込みだという。2019年までには、年間総スマートフォントラフィックが10エクサバイトに達する見込みである。</p>
-					<p>携帯端末市場の天文学的な成長を支える主な要因が、スマートフォンの人気の高まりであることが、Ericssonの新しいデータによって明らかになっている。</p>
-					<p>通信技術企業Ericssonは米国時間11月11日、第3四半期の携帯電話販売台数データを公表し、スマートフォンが、同四半期における世界の全携帯電話販売台数の55％を占めたことを明らかにした。ただし、全携帯電話契約件数に占める割合はまだわずか25〜30％だという。しかし、2019年までには、世界の携帯電話契約件数93億件のうち、56億件（60％）がスマートフォンになる見込みだとEricssonは述べた。</p>
-					<p>Ericssonによると、この動向をけん引するのは、中国などの新興市場における低価格モデルのスマートフォンの登場であるという。</p>
-					<p>スマートフォンの人気の高まりに伴い、携帯端末からのモバイルトラフィックは2013年から2019年の間に10倍に増加するとEricssonは考えている。同社によると、動画が世界のモバイルトラフィックの50％以上を占める見込みだという。2019年までには、年間総スマートフォントラフィックが10エクサバイトに達する見込みである。</p>
-					<p>携帯端末市場の天文学的な成長を支える主な要因が、スマートフォンの人気の高まりであることが、Ericssonの新しいデータによって明らかになっている。</p>
-					<p>通信技術企業Ericssonは米国時間11月11日、第3四半期の携帯電話販売台数データを公表し、スマートフォンが、同四半期における世界の全携帯電話販売台数の55％を占めたことを明らかにした。ただし、全携帯電話契約件数に占める割合はまだわずか25〜30％だという。しかし、2019年までには、世界の携帯電話契約件数93億件のうち、56億件（60％）がスマートフォンになる見込みだとEricssonは述べた。</p>
-					<p>Ericssonによると、この動向をけん引するのは、中国などの新興市場における低価格モデルのスマートフォンの登場であるという。</p>
-					<p>スマートフォンの人気の高まりに伴い、携帯端末からのモバイルトラフィックは2013年から2019年の間に10倍に増加するとEricssonは考えている。同社によると、動画が世界のモバイルトラフィックの50％以上を占める見込みだという。2019年までには、年間総スマートフォントラフィックが10エクサバイトに達する見込みである。</p>
+					<div class="page-header">
+						<h2>最新情報</h2>
+					</div>
+					<div class="hot_infomation">
+						<div class="panel panel-danger">
+							<div class="panel-heading">
+								<h3 class="panel-title">
+									最新情報(14/08/20)
+								</div>
+								<div class="panel-body">
+									<span class="label label-danger">8月28日のアップデートによる変更点</span><BR>
+									<ul>
+										<li>バトルの世界配信機能</li>
+										<li>新ヒーロー追加　<a href="#">情報はこちらをクリック</a></li>
+										<li>新リーグシステム追加</li>
+										<li>マッチメイク機能の向上</li>
+										<li>接続切れを起こしても同じ曲面に復帰可能</li>
+										<li>キャラクターの性能変更　<a href="#">情報はこちらをクリック</a></li>
+										
+								</div>
+							</div>
+						</div>
+					
+					<div class="new_infomation">
+						<div class="panel panel-info">
+							<div class="panel-heading">
+								<h3 class="panel-title">
+									更新情報(14/08/20)
+								</div>
+								<div class="panel-body">
+									<span class="label label-warning">サイト設立</span><BR>
+									<label>HOCの見やすいまとめとして作成しました。</label>
+									<br>
+									<span class="label label-warning">ビルド一覧作成</span><BR>
+									<label>ヒーロー毎のビルドを作成しました。随時更新していきます。</label>
+									<br>
+									<span class="label label-warning">おすすめ集作成</span><BR>
+									<label>アタッカーやメイジ、ワープを持っていない人まで<BR>場面にあったおすすめの魔導版や装備を紹介
+									</label>
+									<br>
+									<span class="label label-warning">現行スレ</span><BR>
+									<label><a href="http://hello.2ch.net/test/read.cgi/iPhone/1405931502/">【DotA】 Heroes of Order & Chaos 32 【MOBA】 <br>http://hello.2ch.net/test/read.cgi/iPhone/1405931502/
+									</label>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-	</body>
-	</html>
+		</body>
+		</html>
